src/test/deca/context/invalid/homemade/assign_class_decompile.res
class A extends Object {
}
{
	(A = 2);
}
